...
    },
    "History" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "履歴"
          }
        }
      }
    },
    "Progress" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "進捗"
          }
        }
      }
    },
    "Settings" : {
      "localizations" : {
...
